# WavToMp3

./: .gitignore  CMakeLists.txt  README.md  Readme.md
Include/: Makefile  Mp3Encoder.h  Utility.h  Utility.h.bak  WavDecoder.h  WavDecoder.h.bak  WavToMp3EncodeSettings.h
Source/: Mp3Encoder.cpp  Mp3Encoder.cpp.bak  Utility.cpp  Utility.cpp.bak  WavDecoder.cpp  WavDecoder.cpp.bak  main.cpp  main.cpp.bak
